tests/reference/asr-func_arg_array-609769c.stderr
semantic error: Array Passed in function Cannot be sliced into dimensions declared in the function.
 --> tests/errors/func_arg_array.f90:4:14
  |
4 |     i = temp(myArray)
  |              ^^^^^^^ 
